GNU bug report logs - #19959
25.0.50; can't bootstrap -- temacs dumps core

Previous Next

Package: emacs;

Reported by: Nicolas Richard <theonewiththeevillook <at> yahoo.fr>

Date: Fri, 27 Feb 2015 14:52:02 UTC

Severity: normal

Merged with 19974, 19980

Found in version 25.0.50

Done: Paul Eggert <eggert <at> cs.ucla.edu>

Bug is archived. No further changes may be made.

To add a comment to this bug, you must first unarchive it, by sending
a message to control AT debbugs.gnu.org, with unarchive 19959 in the body.
You can then email your comments to 19959 AT debbugs.gnu.org in the normal way.

Toggle the display of automated, internal messages from the tracker.

View this report as an mbox folder, status mbox, maintainer mbox


Report forwarded to bug-gnu-emacs <at> gnu.org:
bug#19959; Package emacs. (Fri, 27 Feb 2015 14:52:02 GMT) Full text and rfc822 format available.

Acknowledgement sent to Nicolas Richard <theonewiththeevillook <at> yahoo.fr>:
New bug report received and forwarded. Copy sent to bug-gnu-emacs <at> gnu.org. (Fri, 27 Feb 2015 14:52:02 GMT) Full text and rfc822 format available.

Message #5 received at submit <at> debbugs.gnu.org (full text, mbox):

From: Nicolas Richard <theonewiththeevillook <at> yahoo.fr>
To: bug-gnu-emacs <at> gnu.org
Subject: 25.0.50; can't bootstrap -- temacs dumps core
Date: Fri, 27 Feb 2015 15:51:45 +0100
I can't bootstrap emacs on master branch, atm : temacs dumps core.
The backtrace is below.

This specific error (i.e. SIGSEGV in temacs) was introduced by the
commit below. Before that commit, however, "make bootstrap" wouldn't
work either (namely it was not able to link temacs -- see after the
backtrace if that's of any interest).

--8<---------------cut here---------------start------------->8---
commit 5917b7907ad0cdc38f14967d16aa8472be572e3f
Author: Jan Djärv <jan.h.d <at> swipnet.se>
Date:   Thu Feb 26 16:42:03 2015 +0100

    Don't use OUTER_TO_INNER macros for plain X and lucid.
    
    * xmenu.c (create_and_show_popup_menu): Call XTranslateCoordinates,
    dont use OUTER_TO_INNER macros.
    (x_menu_show): Call x_real_pos_and_offsets, don't use
    OUTER_TO_INNER macros.
--8<---------------cut here---------------end--------------->8---

Now the gdb output with backtrace (note that I disabled the loading of
src/.gdbinit because of errors):

Reading symbols from src/temacs...done.
Starting program: /home/youngfrog/sources/emacs/emacs-new-repo/src/temacs 
warning: Could not load shared library symbols for linux-gate.so.1.
Do you need "set solib-search-path" or "set sysroot"?
[Thread debugging using libthread_db enabled]
Using host libthread_db library "/lib/libthread_db.so.1".

Program received signal SIGSEGV, Segmentation fault.
0xb6d67f34 in backtrace () from /lib/libc.so.6
#0  0xb6d67f34 in backtrace () from /lib/libc.so.6
#1  0x0822f49c in emacs_backtrace (backtrace_limit=-1) at sysdep.c:2177
#2  0x081f41fb in main (argc=1, argv=0xbfffee84) at emacs.c:891
#0  0xb6d67f34 in backtrace () from /lib/libc.so.6
No symbol table info available.
#1  0x0822f49c in emacs_backtrace (backtrace_limit=-1) at sysdep.c:2177
        main_backtrace_buffer = {0xbfffed08, 0xb7ffefbc, 0xb7ff2be6 <malloc+6>, 0xb6c66880, 0xb7fe9f21 <_dl_map_object_deps+641>, 0xb6c6689c, 0xb6c66880, 0x18, 0xbfffecc7, 0xb70b3868, 0xb70b35a8, 0xb7d9b560, 0xb7d9b2b0, 0xb6f2eae8, 0x0, 0xb7febf7e <_dl_catch_error+94>, 0xbfffecc7, 0xbfffe590, 0xb7ffefbc, 
          0xb7fe9c40 <openaux>, 0xb7d83da8, 0xbfffed08, 0xbfffe570, 0xb7febf7e <_dl_catch_error+94>, 0xbfffecc7, 0xbfffe5b0, 0xb7ffefbc, 0xb7fe9c40 <openaux>, 0xb7dbeedc, 0xbfffed08, 0xbfffe590, 0xb7febf7e <_dl_catch_error+94>, 0xb7ff2ac8 <__libc_memalign+8>, 0xb7ffefbc, 0x8, 0xbfffe680, 0xb7ff2c03 <malloc+35>, 
          0x8, 0x1c, 0x30, 0xbfffed08, 0xb7ffefbc, 0xb7ff2be6 <malloc+6>, 0xb6c66860, 0xb7fe9f21 <_dl_map_object_deps+641>, 0xb6c66870, 0xb6c66860, 0xc, 0xbfffed08, 0x1, 0xb6c665b0, 0xbfffe4b0, 0xb7fe9e3d <_dl_map_object_deps+413>, 0xb7fe9c40 <openaux>, 0xbfffecd8, 0xbfffed08, 0xbfffed08, 0x1, 0xb6c66310, 
          0xbfffe620, 0xb7fe9e3d <_dl_map_object_deps+413>, 0xb7fe9c40 <openaux>, 0xbfffecd8, 0xc, 0xbfffed08, 0x1, 0xb6c66000, 0xbfffe640, 0xb7fe9e3d <_dl_map_object_deps+413>, 0xb7fe9c40 <openaux>, 0xbfffecd8, 0x14, 0x8453f14, 0xb7d9b2b0, 0xb6f2eae8, 0x0, 0x0, 0x0, 0x0, 0xb7fe9c40 <openaux>, 0x8453f0c, 
          0xbfffed08, 0xbfffe660, 0xb7febf7e <_dl_catch_error+94>, 0xbfffecc7, 0xbfffe6a0, 0xb7ffefbc, 0xb7fe9c40 <openaux>, 0x8453f04, 0xbfffed08, 0xbfffe680, 0xb7febf7e <_dl_catch_error+94>, 0xbfffecc7, 0xbfffe6c0, 0xb7ffefbc, 0xb7fe9c40 <openaux>, 0x8453efc, 0xbfffed08, 0xbfffe6a0, 
          0xb7febf7e <_dl_catch_error+94>, 0xbfffecc7, 0xbfffe6e0, 0xb7ffefbc, 0xb7fe9c40 <openaux>, 0x8453ef4, 0xbfffed08, 0xbfffe6c0, 0xb7febf7e <_dl_catch_error+94>, 0xbfffed08, 0x1, 0xb6f2eae8, 0xbfffe660, 0xb7fe9e3d <_dl_map_object_deps+413>, 0xb7fe9c40 <openaux>, 0xbfffecd8, 0xb7febf7e <_dl_catch_error+94>, 
          0xbfffed08, 0x1, 0xb6f2e820, 0xbfffe710, 0xb7fe9e3d <_dl_map_object_deps+413>, 0xb7fe9c40 <openaux>, 0xbfffecd8, 0xb7febf7e <_dl_catch_error+94>, 0xbfffed08, 0x1, 0xb6f2e560, 0xbfffe730, 0xb7fe9e3d <_dl_map_object_deps+413>, 0xb7fe9c40 <openaux>, 0xbfffecd8, 0xb7febf7e <_dl_catch_error+94>, 0xbfffed08, 
          0x1, 0xb6f2e2b8, 0xbfffe750, 0xb7fe9e3d <_dl_map_object_deps+413>, 0xb7fe9c40 <openaux>, 0xbfffecd8, 0xb7febf7e <_dl_catch_error+94>, 0xbfffed08, 0x1, 0xb6f2e000, 0xbfffe770, 0xb7fe9e3d <_dl_map_object_deps+413>, 0xb7fe9c40 <openaux>, 0xbfffecd8, 0xb7febf7e <_dl_catch_error+94>, 0xbfffed08, 0x1, 
          0xb70b3b20, 0xbfffe790, 0xb7fe9e3d <_dl_map_object_deps+413>, 0xb7fe9c40 <openaux>, 0xbfffecd8, 0xb7febf7e <_dl_catch_error+94>, 0xbfffed08, 0x1, 0xb70b3868, 0xbfffe7b0, 0xb7fe9e3d <_dl_map_object_deps+413>, 0xb7fe9c40 <openaux>, 0xbfffecd8, 0xb7febf7e <_dl_catch_error+94>, 0xbfffed08, 0x1, 0xb70b35a8, 
          0xbfffe7d0, 0xb7fe9e3d <_dl_map_object_deps+413>, 0xb7fe9c40 <openaux>, 0xbfffecd8, 0xb7febf7e <_dl_catch_error+94>, 0xbfffed08, 0x1, 0xb70b32e8, 0xbfffe7f0, 0xb7fe9e3d <_dl_map_object_deps+413>, 0xb7fe9c40 <openaux>, 0xbfffecd8, 0xb7febf7e <_dl_catch_error+94>, 0xbfffed08, 0x1, 0xb70b3030, 0xbfffe810, 
          0xb7fe9e3d <_dl_map_object_deps+413>, 0xb7fe9c40 <openaux>, 0xbfffecd8, 0xb7febf7e <_dl_catch_error+94>, 0xbfffed08, 0x1, 0xb726dd80, 0xbfffe830, 0xb7fe9e3d <_dl_map_object_deps+413>, 0xb7fe9c40 <openaux>, 0xbfffecd8, 0xb7febf7e <_dl_catch_error+94>, 0xbfffed08, 0x1, 0xb726dad0, 0xbfffe850...}
        bounded_limit = -1
        buffer = 0xbfffe55c
        npointers = 52
#2  0x081f41fb in main (argc=1, argv=0xbfffee84) at emacs.c:891
        dummy = -5268525465680825363
        stack_bottom_variable = -62 '\302'
        do_initial_setlocale = 183
        dumping = false
        skip_args = 0
        rlim = {rlim_cur = 8388608, rlim_max = 18446744073709551615}
        no_loadup = false
        junk = 0x0
        dname_arg = 0x0
        ch_to_dir = 0x0
        original_pwd = 0x0

FTR, here's what the error is when the parent of
5917b7907ad0cdc38f14967d16aa8472be572e3f is checked out:

xmenu.o: dans la fonction « create_and_show_popup_menu »:
/home/youngfrog/sources/emacs/emacs-new-repo/src/xmenu.c:1341: référence indéfinie vers « FRAME_OUTER_TO_INNER_DIFF_X »
/home/youngfrog/sources/emacs/emacs-new-repo/src/xmenu.c:1342: référence indéfinie vers « FRAME_OUTER_TO_INNER_DIFF_Y »
collect2: erreur: ld a retourné 1 code d'état d'exécution

(that's in french, but I assume you can guess the meaning -- and I can
reproduce in english if necessary).

In GNU Emacs 25.0.50.1 (i686-pc-linux-gnu, X toolkit, Xaw3d scroll bars)
 of 2015-02-03 on localhost
Repository revision: 807dad87e61183b05a6951e071ec7a67c8e2abfd
Windowing system distributor `The X.Org Foundation', version 11.0.11500000
System Description:	Gentoo Base System release 2.2

Configured using:
 `configure --with-x-toolkit=lucid --enable-checking --with-wide-int
 'CFLAGS= -O0 -g3''

Configured features:
XAW3D XPM JPEG TIFF GIF PNG RSVG IMAGEMAGICK SOUND GPM DBUS GCONF
GSETTINGS NOTIFY ACL GNUTLS LIBXML2 FREETYPE LIBOTF XFT ZLIB

Important settings:
  value of $LANG: fr_FR.UTF-8
  locale-coding-system: utf-8-unix

-- 
Nicolas Richard




Information forwarded to bug-gnu-emacs <at> gnu.org:
bug#19959; Package emacs. (Fri, 27 Feb 2015 18:16:01 GMT) Full text and rfc822 format available.

Message #8 received at 19959 <at> debbugs.gnu.org (full text, mbox):

From: Glenn Morris <rgm <at> gnu.org>
To: Nicolas Richard <theonewiththeevillook <at> yahoo.fr>
Cc: 19959 <at> debbugs.gnu.org
Subject: Re: bug#19959: 25.0.50; can't bootstrap -- temacs dumps core
Date: Fri, 27 Feb 2015 13:14:56 -0500
Nicolas Richard wrote:

> In GNU Emacs 25.0.50.1 (i686-pc-linux-gnu, X toolkit, Xaw3d scroll bars)

FWIW, http://hydra.nixos.org/build/19982110 flagged this yesterday.
It seems to be specific to 32-bit builds.
(The precise introduction is masked by the previous total build failure
due to a typo.)




Added indication that bug 19959 blocks19759 Request was from Glenn Morris <rgm <at> gnu.org> to control <at> debbugs.gnu.org. (Sat, 28 Feb 2015 01:08:02 GMT) Full text and rfc822 format available.

Merged 19959 19974 19980. Request was from Glenn Morris <rgm <at> gnu.org> to control <at> debbugs.gnu.org. (Mon, 02 Mar 2015 16:52:02 GMT) Full text and rfc822 format available.

Information forwarded to bug-gnu-emacs <at> gnu.org:
bug#19959; Package emacs. (Tue, 03 Mar 2015 16:24:01 GMT) Full text and rfc822 format available.

Message #15 received at 19959 <at> debbugs.gnu.org (full text, mbox):

From: Thomas Fitzsimmons <fitzsim <at> fitzsim.org>
To: Glenn Morris <rgm <at> gnu.org>
Cc: Nicolas Richard <theonewiththeevillook <at> yahoo.fr>, 19959 <at> debbugs.gnu.org
Subject: Re: bug#19959: 25.0.50; can't bootstrap -- temacs dumps core
Date: Tue, 03 Mar 2015 11:23:28 -0500
[Message part 1 (text/plain, inline)]
Glenn Morris <rgm <at> gnu.org> writes:

> Nicolas Richard wrote:
>
>> In GNU Emacs 25.0.50.1 (i686-pc-linux-gnu, X toolkit, Xaw3d scroll bars)
>
> FWIW, http://hydra.nixos.org/build/19982110 flagged this yesterday.
> It seems to be specific to 32-bit builds.
> (The precise introduction is masked by the previous total build failure
> due to a typo.)

This commit breaks bootstrap for me:

commit b74db6347cf5cac1ebd4c604fd5691c588fd8e32
Author: Paul Eggert <eggert <at> cs.ucla.edu>
Date:   Tue Feb 24 16:34:13 2015 -0800

    Backtrace after malloc arena is corrupted
    
    Without this change, if the malloc arena is corrupted and then
    'backtrace' is called, the backtrace can crash because 'backtrace'
    calls 'malloc'.  For more, please see:
    https://sourceware.org/ml/libc-alpha/2015-02/msg00678.html
    * emacs.c (main): Initialize tables used by 'backtrace'.
    * sysdep.c (emacs_backtrace): Document the newly used part of the API.

On my system's glibc version, glibc-2.16-30.fc18.i686, it seems that a
zero size argument to backtrace causes a segfault; minimal example
attached:

$ gcc -Wall backtrace.c
$ env -i ./a.out
Segmentation fault (core dumped)

Thomas
[backtrace.c (text/plain, attachment)]

Reply sent to Paul Eggert <eggert <at> cs.ucla.edu>:
You have taken responsibility. (Thu, 05 Mar 2015 20:03:02 GMT) Full text and rfc822 format available.

Notification sent to Nicolas Richard <theonewiththeevillook <at> yahoo.fr>:
bug acknowledged by developer. (Thu, 05 Mar 2015 20:03:03 GMT) Full text and rfc822 format available.

Message #20 received at 19959-done <at> debbugs.gnu.org (full text, mbox):

From: Paul Eggert <eggert <at> cs.ucla.edu>
To: Colin Baxter <m43cap <at> yandex.com>, emacs-devel <at> gnu.org
Cc: 19959-done <at> debbugs.gnu.org
Subject: Re: Segfault in master
Date: Thu, 05 Mar 2015 12:01:53 -0800
On 03/05/2015 01:31 AM, Colin Baxter wrote:
> Patch worked for me. Thanks David.
>
>

Thanks, I installed a (slightly different) patch as commit 
cbc9d8d4269f2cca7950060b5e37747b27dac1de and am marking Emacs Bug#19959 
as fixed.  I also filed a bug report with the glibc folks (glibc bug 18084).




Reply sent to Paul Eggert <eggert <at> cs.ucla.edu>:
You have taken responsibility. (Thu, 05 Mar 2015 20:03:03 GMT) Full text and rfc822 format available.

Notification sent to jpff <jpff <at> codemist.co.uk>:
bug acknowledged by developer. (Thu, 05 Mar 2015 20:03:03 GMT) Full text and rfc822 format available.

Reply sent to Paul Eggert <eggert <at> cs.ucla.edu>:
You have taken responsibility. (Thu, 05 Mar 2015 20:03:04 GMT) Full text and rfc822 format available.

Notification sent to Eric Hanchrow <eric.hanchrow <at> gmail.com>:
bug acknowledged by developer. (Thu, 05 Mar 2015 20:03:04 GMT) Full text and rfc822 format available.

bug archived. Request was from Debbugs Internal Request <help-debbugs <at> gnu.org> to internal_control <at> debbugs.gnu.org. (Fri, 03 Apr 2015 11:24:03 GMT) Full text and rfc822 format available.

This bug report was last modified 9 years and 262 days ago.

Previous Next


GNU bug tracking system
Copyright (C) 1999 Darren O. Benham, 1997,2003 nCipher Corporation Ltd, 1994-97 Ian Jackson.