Work around x86 glibc backtrace bug

* sysdep.c (emacs_backtrace): Don't dump core on x86.
Fixes: bug#19959